tests/fixtures/invalid/pow_none_int_list.py
# Cannot call pow() with None, Int, List[int]
x = pow(None, 1, [1, 2, 3])
